eggenberg-reverse-proxy-cluster/argocd-apps-configuration/gateway-api/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
  selector: {} # leer, da ServiceEntry übernimmt das Routing
