eggenberg-reverse-proxy-cluster/argocd-apps-configuration/gateway-api/http-route-argocd.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
    - name: ingressgateway
      namespace: istio-system
  hostnames:
    - "argo-rp.philippmhauptmann.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
