eggenberg-reverse-proxy-cluster/argocd-apps-configuration/gateway-api/http-route-jellyfin.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: jellyfin-service-entry
spec:
  hosts:
    - jellyfin-rp.philippmhauptmann.me
  addresses:
    - 192.168.0.129
  ports:
    - number: 80
      name: my-http-port
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: 192.168.0.129
      ports:
        my-http-port: 30013
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-http-route
  namespace: default
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: istio-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - "jellyfin-rp.philippmhauptmann.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains"
              - name: X-Frame-Options
                value: "DENY"
              - name: X-Content-Type-Options
                value: "nosniff"
              - name: X-XSS-Protection
                value: "1; mode=block"
              - name: Referrer-Policy
                value: "no-referrer"
              - name: Content-Security-Policy
                value: "default-src 'self'; script-src 'none'; object-src 'none'; base-uri 'none';"
      backendRefs:
        - name: jellyfin-rp.philippmhauptmann.me
          port: 80
